Fix(timeline): timeline on mobile responsive

--- a/src/assets/css/Timeline/Timelinepage.module.css
+++ b/src/assets/css/Timeline/Timelinepage.module.css
@@ -25,7 +25,7 @@
         /* margin-top: 3vh; */
     }
     .items{
-        margin: 10vw auto;
+        margin: 5vw auto;
         margin-bottom: 0;
     }
 }
